<?php

namespace App\Models;

use App\Models\Task;
use Illuminate\Contracts\Auth\MustVerifyEmail;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;
use Laravel\Sanctum\HasApiTokens;

class User extends Authenticatable
{
    use HasApiTokens, HasFactory, Notifiable;

    /**
     * The attributes that are mass assignable.
     *
     * @var array<int, string>
     */
    protected $fillable = [
        'name',
        'email',
        'password',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var array<int, string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * The attributes that should be cast.
     *
     * @var array<string, string>
     */
    protected $casts = [
        'email_verified_at' => 'datetime',
        'password' => 'hashed',
    ];

// Relation: Un utilisateur (ouvrier) peut avoir plusieurs tâches assignées
    public function tasks()
    {
        return $this->hasMany(Task::class, 'assigne_id');
    }

    public function demandes()
    {
        return $this->hasMany(Demande::class, 'employe_id');
    }

    public function fichesTravail()
    {
        return $this->hasMany(FicheTravail::class, 'ouvrier_id');
    }

}
