classDiagram
    class User {
        +id
        +nom
        +prenom
        +email
        +role
        +password
    }

    class Vehicule {
        +id
        +immatriculation
        +marque
        +modele
        +annee
        +km_actuel
    }

    class Tache {
        +id
        +type
        +statut
        +priorite
        +description
        +vehicule_id
        +assigne_id
    }

    class FicheTravail {
        +id
        +tache_id
        +ouvrier_id
        +date_debut
        +date_fin
        +description
    }

    class StockPiece {
        +id
        +designation
        +quantite
        +seuil_alerte
        +prix_unitaire
        +fournisseur_id
    }

    class Fournisseur {
        +id
        +nom
        +email
        +telephone
        +adresse
    }

    class Commande {
        +id
        +chef_id
        +fournisseur_id
        +statut
        +date_commande
    }

    class Livraison {
        +id
        +commande_id
        +ouvrier_id
        +date_reception
        +statut
    }

    class Demande {
        +id
        +type
        +description
        +employe_id
    }

    class LigneDevis {
        +id
        +devis_id
        +stock_piece_id
        +quantite
        +prix_unitaire
    }

    class LigneCommande {
        +id
        +commande_id
        +stock_piece_id
        +quantite
        +prix_unitaire
    }

    User "1" -- "*" Tache : HasMany
    User "1" -- "*" FicheTravail : HasMany
    User "1" -- "*" Demande : HasMany
    Vehicule "1" -- "*" Tache : HasMany
    Tache "1" -- "*" FicheTravail : HasMany
    Tache "1" -- "*" LigneDevis : HasMany
    FicheTravail "*" -- "*" StockPiece : BelongsToMany
    StockPiece "1" -- "*" LigneCommande : BelongsToMany
    StockPiece "1" -- "*" Fournisseur : BelongsTo
    Fournisseur "1" -- "*" Commande : HasMany
    Commande "1" -- "*" LigneCommande : HasMany
    Commande "1" -- "*" Livraison : HasMany
    Livraison "1" -- "1" Commande : BelongsTo
    Livraison "1" -- "1" User : BelongsTo
    Tache "1" -- "1" Vehicule : BelongsTo
    Tache "1" -- "1" User : BelongsTo
    FicheTravail "1" -- "1" Tache : BelongsTo
    FicheTravail "1" -- "1" User : BelongsTo
    Commande "1" -- "1" User : BelongsTo
    Commande "1" -- "1" Fournisseur : BelongsTo
    Demande "1" -- "1" User : BelongsTo
    LigneDevis "1" -- "1" Tache : BelongsTo
    LigneDevis "1" -- "1" StockPiece : BelongsTo
    LigneCommande "1" -- "1" Commande : BelongsTo
    LigneCommande "1" -- "1" StockPiece : BelongsTo
